--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,25 @@
-beautifulsoup4==4.7.1
-bokeh==1.1.0
-datashader==0.7.0
-datashape==0.5.2
-fuzzywuzzy==0.17.0
-gensim==3.7.3
-h5py==2.9.0
-holoviews==1.12.3
-nltk==3.4.1
-numpy==1.16.4
-pandas==0.24.2
-pandas-profiling==1.4.2
-pandocfilters==1.4.2
-plotly==3.9.0
-protobuf==3.8.0
-scikit-learn==0.21.2
-scipy==1.3.0
-Scrapy==1.6.0
-seaborn==0.9.0
-spacy==2.1.4
-TPOT==0.10.1
-pydot==1.4.1
+beautifulsoup4>=4.7.1
+bokeh>=1.1.0
+datashader>=0.7.0
+datashape>=0.5.2
+fuzzywuzzy>=0.17.0
+gensim>=3.7.3
+h5py>=2.9.0
+holoviews>=1.12.3
+nltk>=3.4.1
+numpy>=1.16.4
+pandas>=0.24.2
+pandas-profiling>=1.4.2
+pandocfilters>=1.4.2
+plotly>=3.9.0
+protobuf>=3.8.0
+scikit-learn>=0.21.2
+scipy>=1.3.0
+Scrapy>=1.6.0
+seaborn>=0.9.0
+spacy>=2.1.4
+TPOT>=0.10.1
+pydot>=1.4.1
+python-Levenshtein>=0.12.0
+statsmodels>=0.10.0rc2
+pydataset>=0.2.0
