--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ holoviews>=1.12.3
 nltk>=3.4.1
 numpy>=1.16.4
 pandas>=0.24.2
-pandas-profiling>=1.4.2
+pandas-profiling>=2.3.0
 pandocfilters>=1.4.2
 plotly>=3.9.0
 protobuf>=3.8.0
@@ -26,3 +26,4 @@ missingno
 cython
 pyod
 pydataset
+dtreeviz
